# MCP-DB-GPT

./: .env.example  .gitignore  README.md  app.py  client.py  main.py  pyproject.toml  query_logs.json  requirements.txt
LLM/: api.py  few_shot_example.py  prompt_template.py
mcp_mysql_server/: prompt_template.py  run_server.py
